# ESP32-C6-LCD

./: .gitignore  CMakeLists.txt  Kconfig.projbuild  README.md  sdkconfig.defaults
BLEWatch/: Display_ST7789.h  LVGL_Driver.cpp  README.md  Wireless.cpp  Wireless.h  blewatch.cpp
BandWatch/: Display_ST7789.h  LVGL_Driver.cpp  LVGL_Driver.h  README.md  bandwatch.cpp  lv_conf.h
ClaudeBot/: ClaudeBot.ino  LVGL_Driver.cpp  README.md  claudebot.cpp  claudebot.h  lv_conf.h  robot.cpp  robot.h
LedRun/: Display_ST7789.cpp  LVGL_Driver.cpp  LVGL_Driver.h  LedRun.ino  README.md  ledrun.cpp  ledrun.h  mode_candle.cpp  mode_candle.h  mode_text.cpp  mode_text.h
Proxmox Dashboard/: .gitignore  sdkconfig.defaults
Proxmox Dashboard/main/: dashboard_ui.c  dashboard_ui.h  display_driver.c  display_driver.h  lv_conf.h  main.c  proxmox_client.h  wifi_manager.h
Proxmox Dashboard/test/test_proxmox_parser/: CMakeLists.txt
Proxmox Dashboard/test/test_proxmox_parser/main/: CMakeLists.txt  test_proxmox_parser.c
ThreadScan/: LVGL_Driver.cpp  README.md  lv_conf.h  threadscan.cpp  threadscan.h
main/: CMakeLists.txt  Kconfig.projbuild  dashboard_ui.c  dashboard_ui.h  display_driver.c  display_driver.h  idf_component.yml  lv_conf.h  main.c  proxmox_ca.h  proxmox_client.c  proxmox_client.h  wifi_manager.c  wifi_manager.h
